fixed the tasks according to the review